# yolo_vlm_sync_responce

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_chatbot.py
backend/: agents.py  ai_broker.py  animals.db  database.py  improved_tracking_manager.py  improved_video_recording.py  main.py  migrate_database.py  queen_ai.py  tracker.py  verification_manager.py
frontend/: app.js  index.html  style.css
